--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "transporter": "^0.0.1"
   }
 }
